@@ -1316,15 +1316,15 @@
       <method name="GetExtents" cname="pango_layout_line_get_extents">
         <return-type type="void" />
         <parameters>
-          <parameter type="PangoRectangle*" name="ink_rect" />
-          <parameter type="PangoRectangle*" name="logical_rect" />
+          <parameter type="PangoRectangle*" name="ink_rect" pass_as="ref" null_ok="1" />
+          <parameter type="PangoRectangle*" name="logical_rect" pass_as="ref" null_ok="1" />
         </parameters>
       </method>
       <method name="GetPixelExtents" cname="pango_layout_line_get_pixel_extents">
         <return-type type="void" />
         <parameters>
-          <parameter type="PangoRectangle*" name="ink_rect" />
-          <parameter type="PangoRectangle*" name="logical_rect" />
+          <parameter type="PangoRectangle*" name="ink_rect" pass_as="ref" null_ok="1" />
+          <parameter type="PangoRectangle*" name="logical_rect" pass_as="ref" null_ok="1" />
         </parameters>
       </method>
       <method name="GetXRanges" cname="pango_layout_line_get_x_ranges">
