@@ -1,3 +1,9 @@
+2003-11-18  Mike Kestner  <mkestner@ximian.com>
+
+	* pango/Pango.metadata : mark ref params on LayoutLine.GetExtents
+	and GetPixelExtents.  [Fixes #50338]
+	* pango/pango-api.xml : regenerated.
+
 2003-11-18  Peter Williams  <peter@newton.cx>
 
  	* gtk/NodeStore.cs (GetNode): New public function. Patch refactored
